<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Root Validator</string>
    <string name="share_result">Share result</string>
    <string name="follow_darken">Follow darken</string>
    <string name="share">Share</string>
    <string name="about_version_message">%1$s %2$s (%3$s) by darken.\nFind out about new stuff, follow me.</string>
    <string name="about">About</string>
    <string name="progress_wait">One moment, please.</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message">This app will test your root setup, it will not enable root access.</string>
    <string name="include_extended_message">Do you want to include extended test output?</string>
    <string name="button_simple">Simple</string>
    <string name="button_extended">Extended</string>
    <string name="cant_open">Can\'t open: %1$s</string>
    <string name="action_donate">Donate</string>
    <string name="donate_description">Enjoying the app?</string>
    <string name="label_applet_source_test">Applet Source Test</string>
    <string name="label_no_applet_source">No applet source</string>
    <string name="label_applet_source_found">Applet source found</string>
    <string name="label_multiple_applet_sources">Multiple applet sources</string>
    <string name="msg_available_via_path">Available via $PATH</string>
    <string name="msg_not_available_via_path">Not available via $PATH</string>
    <string name="label_general_root_test">General Root Test</string>
    <string name="label_root_available">Root available.</string>
    <string name="label_root_denied">Root denied?</string>
    <string name="label_root_unavailable">Root unavailable.</string>
    <string name="msg_failed_to_launch_shell">Failed to launch a root shell.</string>
    <string name="msg_root_shell_launched">Root shell launched successfully.</string>
    <string name="msg_id_unexpected">\'id\' returned unexpected output.</string>
    <string name="msg_id_expected">\'id\' returned expected output.</string>
    <string name="msg_bad_exitcodes">Elevated permissions are available, but incorrect exit codes are returned.</string>
    <string name="msg_good_exitcodes">Su binary returned OK exitcode.</string>
    <string name="label_selinux_test">SELinux Test</string>
    <string name="label_selinux_enforcing">SELinux is enforcing</string>
    <string name="label_selinux_permissive">SELinux is permissive</string>
    <string name="label_selinux_disabled">SELinux is disabled</string>
    <string name="label_selinux_unknown">SELinux state is unknown</string>
    <string name="msg_error_no_app_share">No app available to share results.</string>
    <string name="label_superapp_test">SuperUser App Test</string>
    <string name="label_multiple_superapps">Multiple superuser apps</string>
    <string name="label_superapp_found">Superuser app found</string>
    <string name="label_no_superapp">No superuser app found</string>
    <string name="label_export_title">RootValidator Results</string>
    <string name="label_export_section_result">Result</string>
    <string name="label_export_section_extras">Extras</string>
    <string name="label_subinary_test">Su Binary Test</string>
    <string name="label_no_subinary">No su binary available.</string>
    <string name="label_subinary_available">Su binary was available.</string>
    <string name="msg_subinary_via_path">su binary is available via $PATH.</string>
    <string name="msg_subinary_not_via_path">su binary not available via $PATH.</string>
    <string name="label_donate">Donate</string>
</resources>