<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/card_background"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextStyleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"/>

        <TextView
            android:id="@+id/tv_message"
            style="@style/TextStyleBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingTop="8dp"
            android:text="@string/include_extended_message"
            android:textColor="@color/textcolor_secondary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="end">

        <Button
            android:id="@+id/bt_simple"
            style="@style/DialogButtonStyle"
            android:text="@string/button_simple"/>

        <Button
            android:id="@+id/bt_extended"
            style="@style/DialogButtonStyle"
            android:text="@string/button_extended"/>
    </LinearLayout>
</LinearLayout>